added basic new note container

--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
         </form>
         <button id="btn-click">ClickMe</button>
     </div>
+    <div>
+        <h2>Notes</h2>
+        <div id="new-notes">
+
+        </div>
+    </div>
 
     <script src="app.js"></script>
 </body>
